[package]
name = "pax-playground-new"
version = "0.10.6"
edition = "2021"

[dependencies]
pax-lang = { version = "0.10.6" }
pax-std = { version = "0.10.6" }
pax-compiler = { version = "0.10.6", optional = true}
serde_json = {version = "1.0.95", optional = true}

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser"]

[features]
parser = ["pax-std/parser", "pax-lang/parser", "dep:serde_json", "dep:pax-compiler"]
